final touch to project

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,11 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>lets go ahead</h1>
+    <p class="menu">Our Menu</p>
+    <div class="block col-4 col-6">
+        <div class="container">
+            <div class="heading1">Chicken</div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo aut tenetur quam iusto reprehenderit distinctio ipsam sapiente maxime. Sit a et amet, beatae eos sed! Obcaecati illo beatae nulla inventore.</p>
+        </div>
+    </div>
+    <div class="block col-4 col-6">
+        <div class="container">
+            <div class="heading2">Beef</div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo aut tenetur quam iusto reprehenderit distinctio ipsam sapiente maxime. Sit a et amet, beatae eos sed! Obcaecati illo beatae nulla inventore.</p>
+        </div>
+    </div>
+    <div class="block col-4 col-12">
+        <div class="container">
+            <div class="heading3">Sushi</div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo aut tenetur quam iusto reprehenderit distinctio ipsam sapiente maxime. Sit a et amet, beatae eos sed! Obcaecati illo beatae nulla inventore.</p>
+        </div>
+    </div>
 </body>
 
 </html>
